# rules_docker_issue

./: .bazelrc  .gitignore  README.md  WORKSPACE  workspace_config.sh
home/: BUILD.bazel
home/src/: index.js
